# Energie-Management-Dashboard

./: .gitignore  Dockerfile  FRONTEND_RECOMMENDATIONS.md  README.md  alembic.ini  docker-compose.yml  joulejournal.db  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 1243d22bf8fa_make_monthlyjournal_fields_nullable.py  1a2b3c4d5e6f_create_initial_tables.py  418ae91b3611_initial_migration.py  5e2d3bd5e9c1_refactor_models_for_energy_dashboard_.py  656b4301ba15_add_battery_and_solar_panel_tables.py  aada757623b7_add_tariff_model.py  d9a5b3f7d1e9_initial_migration.py  e9b403db6e1e_add_journal_car_and_entity_tables.py
app/: main.py
app/api/: deps.py
app/core/: config.py  logging_config.py  security.py
app/crud/: __init__.py  battery.py  car.py  crud_analysis.py  crud_battery.py  crud_car.py  crud_car_usage.py  crud_debug.py  crud_investments.py  crud_journal.py  crud_metrics.py  crud_monthly_energy.py  crud_solar_investment.py  crud_solar_panel.py  crud_tariff.py  crud_tariffs.py  journal.py  (+3 more)
backend/: .env.example  Dockerfile  requirements.txt
docs/: specification.md
frontend/: index.html  package-lock.json  package.json
old ignore unless instructed/: .gitignore  docker-compose.yml
scripts/: import_data.py  seed_db.py  start.sh
templates/: admin.html  index.html  login.html
tests/: conftest.py  disabled_test_energy_calculations.py  test_api_batteries.py  test_api_cars.py  test_api_debug.py  test_api_investments.py  test_api_journal.py  test_api_solar_panels.py  test_api_tariffs.py  test_energy_calculations.py  test_main.py
(+142 files in other folders)
