[tool.poetry]
name = "app"
version = "0.1.0"
description = "JouleJournal API"
authors = ["Jules <jules@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
sqlalchemy = "*"
psycopg2-binary = "*"
pydantic = "*"
python-jose = {extras = ["cryptography"], version = "*"}
passlib = {extras = ["bcrypt"], version = "*"}
alembic = "*"
python-multipart = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
httpx = "*"
pytest-env = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
